@@ -34,6 +34,7 @@
 	- add ja translation and man pages (Kanda Mitsuru kanda@nn.iij4u.or.jp).
 	- fix: fp.subDir was incorrectly set to NULL in sparse chroot's.
 	- fix: manageFile needs to and with O_WRONLY(=1), not O_RDONLY(=0).
+	- fix: resurrect failed glob error message during build.
 
 3.0.2 -> 3.0.3
 	- add --eval to find result of macro expansion.
